Fixed width overflow issue and updated gulp task

--- a/resources/css/main.css
+++ b/resources/css/main.css
@@ -1,5 +1,5 @@
 
-body {
+html,body {
 	font-family: 'Lato', 'Helvetica Neue', Helvetica, Arial, sans-serif;
 	overflow-x: hidden;
 }
